# anime-scraper

./: .gitignore  README.md  pyproject.toml  requirements.txt  smoke_test.py
infra/: schema.sql
scraper/: __init__.py  config.py  db.py  fetcher.py  image_pipeline.py  main.py  models.py  parser_detail.py  parser_list.py  updater.py  utils.py
tests/: test_db_upsert.py  test_hashing.py  test_image_webp.py  test_slugify.py
